# in_place

./: Cargo.toml  README.md  instructions.md
.github/workflows/: ci.yaml  publish.yaml
src/: in_place_attribute.rs  lib.rs
src/auto_rename_attribute/: codegen.rs  mod.rs  parse.rs
src/in_place/: codegen.rs  parse.rs
src/in_place_attribute/: codegen.rs
src/sponge_functionlike/: codegen.rs  mod.rs  parse.rs
tests/: auto_rename.rs  sponge.rs  ui.rs
tests/auto_rename/fail/: invalid_syntax.rs  invalid_syntax.stderr
tests/auto_rename/pass/: valid_syntax.expanded.rs  valid_syntax.rs
tests/sponge/fail/: invalid_syntax.rs  invalid_syntax.stderr
tests/sponge/pass/: valid_syntax.expanded.rs  valid_syntax.rs
tests/ui/fail/: invalid_syntax.rs  invalid_syntax.stderr
tests/ui/pass/: valid_syntax.rs
