[package]
name = "in_place"
version = "0.1.0"
edition = "2021"
authors = ["SteampunkIslande <charles.monod-broca@neuf.fr>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "~1.0", features = ["full"] }
quote = "~1.0"
proc-macro2 = "~1.0"
proc-macro-error = "~1.0"
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
macrotest = "1.2.1"
tempfile = "3"
trybuild = "1.0.116"
