[package]
name = "in_place_macro"
version = "0.2.0"
license = "MIT"
edition = "2021"
authors = ["SteampunkIslande <charles.monod-broca@neuf.fr>"]
repository = "https://github.com/SteampunkIslande/in_place"
readme = "README.md"
description = "A Rust crate for in-place file editing with automatic renaming and backup support."

[lib]
proc-macro = true

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
runtime-macros = "1.1.1"
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
proc-macro-error2 = "2.0.1"

[dev-dependencies]
macrotest = "1.2.1"
tempfile = "3"
trybuild = "1.0.116"
